#1975 closed bug (fixed)
Boot splash doesn't show with intel i865 and CRT
Reported by: | umccullough | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | System/Boot Loader | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | x86 |
Description
Ever since the new boot splash was added, my Dell Optiplex GX270 no longer shows a boot splash using a Cornerstone Color 50/115 21" CRT.
The video chip on the GX270 is an integrated Intel 82865G
Tested with hrev24615 (serial log attached)
If I manually specify a video mode using the boot menu, it shows up just fine.
Attachments (3)
Change History (7)
by , 16 years ago
Attachment: | r24615_gx270.txt added |
---|
by , 16 years ago
Attachment: | r24615_gx270_trace_video_on.txt added |
---|
same revision with TRACE_VIDEO defined
comment:1 by , 16 years ago
comment:2 by , 16 years ago
Went back to hrev24608 (and also made sure to revert video.cpp) - then re-enabled TRACE_VIDEO and re-tested.
Still apparently chooses 1600x1200x8bpp in the old rev.
comment:3 by , 16 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Thanks! TRACE_VIDEO was very helpful indeed: what happens is the following:
- EDID information could not be read for your monitor.
- unlike most (all?) other cards I know, the VESA resolution table is ordered differently than usual. This broke the code that choose the right standard mode.
In hrev24619 I've changed the way this mode is found.
serial log for hrev24615 standard