* The previous code to retrieve the standard video mode did rely on the fact   that they are ordered by size. * This actually doesn't seem to be the case for all cards. Hence, we now   search for an appropriate mode only after we've collected all modes. * Extended find_video_mode() to be able to ignore the height of a video mode;   that way, we can prefer a horizontal resolution of 800 without having to   care about the aspect ratio. * This fixes bug #1975.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@24619 a95241bf-73f2-0310-859d-f6bbb57e9c96